--- a/index.html
+++ b/index.html
@@ -16,46 +16,59 @@
         <div class="row">
             <div class="col info-box">
                 <h3>Formulas and Rules of Thumb</h3>
-                <p>Load Factor = 1/cos(bank °)</p>
-                <p>Vstall bank = Vstall * sqrt(load factor)</p>
-                <p>TOD [NM] = (Current Altitude - Desired Altitude) / 1000 * 3</p>
-                <p>+27ft for every hPa increasea</p>
-                <p>-2K for every 1000ft increase</p>
-                <p>IAS + 2% for every 1000ft increase. TAS is compensated also for temperature, IAS is not.</p>
+                <ul>
+                    <li>Load Factor = 1/cos(bank °)</li>
+                    <li>Vstall bank = Vstall * sqrt(load factor)</li>
+                    <li>TOD [NM] = (Current Altitude - Desired Altitude) / 1000 * 3</li>
+                    <li>+27ft for every hPa increase</li>
+                    <li>-2K for every 1000ft increase</li>
+                    <li>IAS + 2% for every 1000ft increase. TAS is compensated also for temperature, IAS is not.</li>
+                </ul>
             </div>
         </div>
         <div class="row">
             <div class="col-4 info-box">
                 <h3>Speeds</h3>
-                <p>Vrotate 50 kts</p>
-                <p>Vx 60 kts</p>
-                <p>Vy 67 kts</p>
-                <p>Vbest glide 60 kts</p>
-                <p>Vcruise climb 70 kts</p>
-                <p>Vbase 65 kts</p>
-                <p>Vfinal 60 kts</p>
-                <p><span class="badge bg-success">Note</span> Wind increments on Final: for wind ≥10 kts, add 1/3 of headwind comp or full wind gust spread, whichever is higher, to Vfinal.</p>
+                <ul>
+                    <li>Vrotate 50 kts</li>
+                    <li>Vx 60 kts</li>
+                    <li>Vy 67 kts</li>
+                    <li>Vbest glide 60 kts</li>
+                    <li>Vcruise climb 70 kts</li>
+                    <li>Vbase 65 kts</li>
+                    <li>Vfinal 60 kts</li>
+                    <li>
+                        <span class="badge bg-success">Note</span>
+                        Wind increments on Final: for wind ≥10 kts, add 1/3 of headwind comp or full wind gust spread, whichever is higher, to Vfinal.
+                    </li>
+                </ul>
             </div>
             <div class="col info-box">
                 <h3>Fuel</h3>
-                <p>Total Capacity: 26 USG / 98.41 l</p>
-                <p>Total Usable Fuel: 24.5 USG / 92.7 l </p>
-                <p>Fuel Consumption: 6 USG / h or 24 l / h</p>
+                <ul>
+                    <li>Total Capacity: 26 USG / 98.41 l</li>
+                    <li>Total Usable Fuel: 24.5 USG / 92.7 l</li>
+                    <li>Fuel Consumption: 6 USG / h or 24 l / h</li>
+                </ul>
             </div>
         </div>
         <div class="row">
             <div class="col info-box">
                 <h3>Mechanical Dimensions</h3>
-                <p>Wingspan: 33 feet and 4 inches / 10.3 meters</p>
+                <ul>
+                    <li>Wingspan: 33 feet and 4 inches / 10.3 meters</li>
+                </ul>
             </div>
-            <div class="col-3 info-box">
+            <div class="col info-box">
                 <h3>Conversions</h3>
-                <p>1 USG = 3.785 l</p>
-                <p>1 NM = 1.852 km</p>
-                <p>1 min = 1.333 NM</p>
-                <p>1 NM = 0.666 min</p>
-                <p>1 ft = 0.3048 m</p>
-                <p>1 m = 3.28084 ft</p>
+                <ul>
+                    <li>1 USG = 3.785 l</li>
+                    <li>1 NM = 1.852 km</li>
+                    <li>1 min = 1.333 NM</li>
+                    <li>1 NM = 0.666 min</li>
+                    <li>1 ft = 0.3048 m</li>
+                    <li>1 m = 3.28084 ft</li>
+                </ul>
             </div>
         </div>
         <div class="row">
@@ -83,6 +96,16 @@
                     <li>Master switch off</li>
                 </ol>
                 <h3>Airwork Maneuvers</h3>
+                <h4>HASELL</h4>
+                <p>A good way to make sure the plane and surroundings are prepared is HASELL</p>
+                <ul>
+                    <li>Height - Height above ground is sufficient</li>
+                    <li>Airframe - Flaps up, doors and windows closed</li>
+                    <li>Safety - Seatbelts fastened</li>
+                    <li>Engine - Check engine parameters</li>
+                    <li>Location - Suitable area for emergency landing</li>
+                    <li>Lookout - Clear of traffic</li>
+                </ul>
                 <h4>Approach to stall in clean config</h4>
                 <ol>
                     <li>Lookout / HASELL</li>
@@ -96,7 +119,31 @@
                 <h4>Full stall in clean config</h4>
                 <h4>Full stall in landing config</h4>
                 <h4>Approach to stall in approach config (Flaps 20°)</h4>
+                <ol>
+                    <li>HASELL</li>
+                    <li>Approach check (Carb heat)</li>
+                    <li>Abeam threshold, Flaps 10°</li>
+                    <li>Approaching glide, 1500 RPM, Flaps 20°, Nose down</li>
+                    <li>Lookout, turn left</li>
+                    <li>When stalling, Nose down, Go around, Wings level</li>
+                    <li>Climb check</li>
+                </ol>
                 <h4>Recover from spiral dive</h4>
+                <ol>
+                    <li>Throttle idle</li>
+                    <li>Level wings</li>
+                    <li>Nose level</li>
+                    <li>Throttle full</li>
+                    <li>Climb check</li>
+                </ol>
+                <h4>Steep turn</h4>
+                <ol>
+                    <li>Lookout / HASELL</li>
+                    <li>Roll into 45° bank, increase PWR to maintain altitude</li>
+                    <li>Maintain altitude and airspeed</li>
+                    <li>Roll out 20° before desired heading</li>
+                    <li>Reduce PWR to cruise</li>
+                </ol>
 
                 <h4>Power idle approach</h4>
                 <ol>
