Completed Airwork section

--- a/index.html
+++ b/index.html
@@ -44,19 +44,40 @@
                 </ul>
             </div>
             <div class="col info-box">
+                <h3>Engine</h3>
+                <ul>
+                    <li>Avco Lycoming O-235-N2C</li>
+                    <li>4 Cylinder Boxer</li>
+                    <li>3.8 l</li>
+                    <li>108 PS at 2550 RPM</li>
+                </ul>
+            </div>
+            <div class="col info-box">
                 <h3>Fuel</h3>
                 <ul>
+                    <li>Fuel types: 100LL or 100</li>
                     <li>Total Capacity: 26 USG / 98.41 l</li>
-                    <li>Total Usable Fuel: 24.5 USG / 92.7 l</li>
+                    <li>Total Usable Fuel: 24.5 USG / 92.7 l = 03:50 h</li>
                     <li>Fuel Consumption: 6 USG / h or 24 l / h</li>
                 </ul>
             </div>
+            <div class="col info-box">
+                <h3>Oil</h3>
+                <ul>
+                    <li>MIL-L-22851</li>
+                    <li>SAE 30</li>
+                    <li>Capacity: Sump 6 Quarts, Total 7 Quarts</li>
+                </ul>
+            </div>
+
         </div>
         <div class="row">
             <div class="col info-box">
                 <h3>Mechanical Dimensions</h3>
                 <ul>
-                    <li>Wingspan: 33 feet and 4 inches / 10.3 meters</li>
+                    <li>Wingspan: 33 feet and 4 inches / 10.2 meters</li>
+                    <li>Length: 24 feet and 1 inch / 7.4 meters</li>
+                    <li>Height: 8 feet 6 inch / 2.6 meters</li>
                 </ul>
             </div>
             <div class="col info-box">
@@ -95,56 +116,104 @@
                     <li>Flaps as required</li>
                     <li>Master switch off</li>
                 </ol>
+            </div>
+            <div class="info-box">
                 <h3>Airwork Maneuvers</h3>
                 <h4>HASELL</h4>
                 <p>A good way to make sure the plane and surroundings are prepared is HASELL</p>
-                <ul>
+                <ol>
                     <li>Height - Height above ground is sufficient</li>
                     <li>Airframe - Flaps up, doors and windows closed</li>
                     <li>Safety - Seatbelts fastened</li>
                     <li>Engine - Check engine parameters</li>
                     <li>Location - Suitable area for emergency landing</li>
                     <li>Lookout - Clear of traffic</li>
-                </ul>
-                <h4>Approach to stall in clean config</h4>
+                </ol>
+                <h4>Turn 30°</h4>
                 <ol>
-                    <li>Lookout / HASELL</li>
-                    <li>Approach check (Carb heat)</li>
-                    <li>PWR idle</li>
-                    <li>Defend the altitude by pitch</li>
-                    <li>When approaching stall -> Nose down, Go around (Full PWR, carb heat off)</li>
+                    <li>FRP / HDG</li>
+                    <li>Lookout</li>
+                    <li>3 B's (Bank, Ball, Backpressure)</li>
+                </ol>
+                <h4>Steep Turn 45°</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>+50 RPM</li>
+                    <li>Lookout</li>
+                    <li>3 B's</li>
+                    <li>-50 RPM</li>
+                </ol>
+                <h4>Slow flight 60 kt</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>Reduce power to be at 60 kt</li>
+                    <li>Maintain altitude</li>
+                    <li>Trim</li>
+                    <li>Go around for cruise</li>
+                </ol>
+                <h4>Slow flight critical low airspeed</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>Reduce power to be at 60 kt</li>
+                    <li>Maintain altitude</li>
+                    <li>Trim</li>
+                    <li>Go around for cruise</li>
+                </ol>
+                <h4>Pwr idle stall</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>Power idle</li>
+                    <li>Maintain altitude</li>
+                    <li>When stalling, nose down, go around (Full PWR, Carb Heat off, Flaps stepwise up</li>
+                    <li>Climb check</li>
+                </ol>
+                <h4>Approach to stall in base config</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>2100 RPM</li>
+                    <li>ABM Threshold, speed white arc, flaps 10°</li>
+                    <li>Approaching glide, 1500 RPM, Flaps 20°, starting descend, nose down</li>
+                    <li>Turn in base max 20° bank</li>
+                    <li>Fehler einbauen (back pressure)</li>
+                    <li>When stall warning audible, nose down, wings level, go around (full pwr, carb heat off, flaps stepwise up</li>
                     <li>Climb check</li>
                 </ol>
                 <h4>Approach to stall in landing config</h4>
-                <h4>Full stall in clean config</h4>
-                <h4>Full stall in landing config</h4>
-                <h4>Approach to stall in approach config (Flaps 20°)</h4>
                 <ol>
-                    <li>HASELL</li>
-                    <li>Approach check (Carb heat)</li>
-                    <li>Abeam threshold, Flaps 10°</li>
-                    <li>Approaching glide, 1500 RPM, Flaps 20°, Nose down</li>
-                    <li>Lookout, turn left</li>
-                    <li>When stalling, Nose down, Go around, Wings level</li>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>2100 RPM</li>
+                    <li>ABM Threshold, speed white arc, flaps 10°</li>
+                    <li>Approaching glide, 1500 RPM, Flaps 20°, starting descend, nose down</li>
+                    <li>Turn in base max 20° bank</li>
+                    <li>Turn final, flaps full</li>
+                    <li>Fehler einbauen (back pressure)</li>
+                    <li>When stall warning audible, nose down, wings level, go around (full pwr, carb heat off, flaps stepwise up</li>
                     <li>Climb check</li>
+                </ol>
+                <h4>Steep gliding turn / Steilspirale</h4>
+                <ol>
+                    <li>FRP / HDG</li>
+                    <li>AC</li>
+                    <li>Pwr idle</li>
+                    <li>Pitch for 70 kt</li>
+                    <li>Trim</li>
+                    <li>Lookout</li>
+                    <li>45° bank, 2 orbits, maintain 70 kt by pitch</li>
+                    <li>Go around, full pwr, carb heat off, flaps stepwise up</li>
                 </ol>
                 <h4>Recover from spiral dive</h4>
                 <ol>
                     <li>Throttle idle</li>
                     <li>Level wings</li>
-                    <li>Nose level</li>
+                    <li>Nose slowly up</li>
                     <li>Throttle full</li>
                     <li>Climb check</li>
                 </ol>
-                <h4>Steep turn</h4>
-                <ol>
-                    <li>Lookout / HASELL</li>
-                    <li>Roll into 45° bank, increase PWR to maintain altitude</li>
-                    <li>Maintain altitude and airspeed</li>
-                    <li>Roll out 20° before desired heading</li>
-                    <li>Reduce PWR to cruise</li>
-                </ol>
-
                 <h4>Power idle approach</h4>
                 <ol>
                     <li>Vbest glide: 60 kt</li>
